# gin-rummy-twist

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  pr-title-check.yml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/(pages)/home/: page.tsx
frontend/components/lib/: header.tsx
frontend/lib/data/: cards.data.ts
frontend/lib/my-components/: deal-card-animation.tsx
frontend/lib/shared-store/: ClientProvider.tsx
src/backend/: Dockerfile  README.md  app.py  backend_main.py  pom.xml  pyproject.toml
src/backend/lib/: authentication.py  bot.py  match.py
src/backend/py_flask/Scripts/: activate  activate.bat
src/backend/src/main/java/backend/springboot/: SpringbootApplication.java
src/backend/src/main/java/backend/springboot/MVC/controller/: GameController.java
src/backend/src/main/java/backend/springboot/MVC/mapper/: GameMapper.java
src/backend/src/main/java/backend/springboot/MVC/pojo/: Card.java
src/backend/src/main/java/backend/springboot/MVC/service/: GameServiceImpl.java
src/backend/src/main/resources/: application.properties
src/backend/src/main/resources/db.migration/: V1__Create_Table.sql
src/backend/src/main/resources/templates/: customError.html  index.html
src/backend/templates/: status.html
src/frontend/: Dockerfile  README.md  docker-compose.yml  jest.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/frontend/app/: layout.tsx
src/ref_backend/: Authentication.java
(+49 files in other folders)
